2001-02-23  John Harper  <jsh@eazel.com>

	* sawfish/wm/state/iconify.jl (window-sticky-p/workspace,
	make-window-sticky/workspace, make-window-unsticky/workspace,
	window-sticky-p/viewport, make-window-sticky/viewport,
	make-window-unsticky/viewport): new functions, used to
	implement the combined sticky functions. They're also exported

	* sawfish/wm/state/wm-spec.jl: uses the new /workspace or
	/viewport sticky functions throughout

	Fixed typo of _NET_WM_STATE_MAXIMIZED_HORIZ instead of HORZ

	Add update-client-list-hints to after-restacking-hook instead
	of workspace-state-change-hook

	(update-client-list-hints): added keyword arg
	ONLY-STACKING-LIST; reverse the result of the stacking-order
	function before storing it in the _NET_CLIENT_LIST_STACKING
	property

	(client-message-handler): use the display-window function to
	implement the _NET_ACTIVE_WINDOW request. Added a
	_NET_WM_DESKTOP handler - handles making the window sticky or
	changing its workspace
	
2001-02-22  John Harper  <jsh@eazel.com>

	* sawfish/wm/placement.jl (place-window): don't try to place
	windows with the fixed-position property

2001-02-14  John Harper  <jsh@eazel.com>

	* version 0.37.2

	* sawfish/wm/commands/move-resize.jl (viable-move-resize-p):
	doh! fixed this properly now, was using the wrong variable to
	get the edge list

	* version 0.37.1

	* sawfish/wm/commands/move-resize.jl (viable-move-resize-p):
	fixed stupid typo in `region' and `border' modes (using
	direction instead of edge list)

2001-02-13  John Harper  <jsh@eazel.com>

	* version 0.37

	* sawfish/wm/state/gnome.jl (gnome-window-class-hacks): 
	* sawfish/wm/state/wm-spec.jl (wm-class-hacks): 
	Look for `Panel/panel_window' instead of `Panel/panel'. This
	may not work well immediately, but it will with the forthcoming
	gnome-core release

	* sawfish/wm/ext/window-history.jl: new command line option
	`--window-history-file=FILE' to specify where to load and store
	the history information
